fix(08): revise plans based on checker feedback

--- a/.planning/phases/08-hooks-workflows-review/08-01-PLAN.md
+++ b/.planning/phases/08-hooks-workflows-review/08-01-PLAN.md
@@ -8,6 +8,8 @@ files_modified:
   - lib/config.sh
   - plugins/git/hooks/commit-msg
   - plugins/git/hooks/pre-push
+  - plugins/git/templates/git-hooks.conf
+  - plugins/claude/templates/claude-hooks.conf
   - plugins/claude/templates/hooks-conf/default.conf
   - plugins/claude/templates/hooks-conf/strict.conf
   - plugins/claude/templates/hooks-conf/permissive.conf
@@ -23,7 +25,7 @@ must_haves:
     - "hooks.conf profile templates are removed"
   artifacts:
     - path: "lib/config.sh"
-      provides: "Shared config loading helper for hooks"
+      provides: "Shared config loading helper and SSOT variable reference"
       contains: "load_hook_config"
     - path: "plugins/git/hooks/commit-msg"
       provides: "Refactored commit-msg hook with unified config"
@@ -31,11 +33,21 @@ must_haves:
     - path: "plugins/git/hooks/pre-push"
       provides: "Refactored pre-push hook with unified naming"
       contains: "GIT_HOOK_BRANCH_PROTECTION"
+    - path: "plugins/git/templates/git-hooks.conf"
+      provides: "Git plugin config template with all GIT_HOOK_* defaults"
+      contains: "GIT_HOOK_BLOCK_AI_ATTRIBUTION"
+    - path: "plugins/claude/templates/claude-hooks.conf"
+      provides: "Claude plugin config template with CLAUDE_HOOK_* settings"
+      contains: "CLAUDE_HOOK_RUFF_FORMAT"
   key_links:
-    - from: "plugins/git/hooks/commit-msg"
-      to: "lib/config.sh"
-      via: "config loading pattern"
+    - from: "lib/config.sh"
+      to: "plugins/git/hooks/commit-msg"
+      via: "SSOT variable naming reference (documentation, not runtime sourcing — hooks use inline config loading)"
       pattern: "GIT_HOOK_"
+    - from: "plugins/git/templates/git-hooks.conf"
+      to: "plugins/git/hooks/commit-msg"
+      via: "deployed config file sourced by hooks at runtime"
+      pattern: "GIT_HOOK_BLOCK_AI_ATTRIBUTION"
 ---
 
 <objective>
@@ -184,8 +196,8 @@ Refactor the existing commit-msg hook to use the unified variable naming from Ta
 </task>
 
 <task type="auto">
-  <name>Task 3: Refactor pre-push hook + remove hooks.conf profiles</name>
-  <files>plugins/git/hooks/pre-push, plugins/claude/templates/hooks-conf/default.conf, plugins/claude/templates/hooks-conf/strict.conf, plugins/claude/templates/hooks-conf/permissive.conf</files>
+  <name>Task 3: Refactor pre-push hook, create plugin config templates, remove hooks.conf profiles</name>
+  <files>plugins/git/hooks/pre-push, plugins/git/templates/git-hooks.conf, plugins/claude/templates/claude-hooks.conf, plugins/claude/templates/hooks-conf/default.conf, plugins/claude/templates/hooks-conf/strict.conf, plugins/claude/templates/hooks-conf/permissive.conf</files>
   <action>
 **Pre-push hook refactor:**
 1. Rename `GIT_HOOK_PREPUSH_PROTECTION` to `GIT_HOOK_BRANCH_PROTECTION` throughout
@@ -203,6 +215,62 @@ Refactor the existing commit-msg hook to use the unified variable naming from Ta
 ```
 5. Maintain bash 3.2 compatibility
 
+**Create git plugin config template (`plugins/git/templates/git-hooks.conf`):**
+Per locked decision: "Git-related settings move to git plugin templates." Create a bash-sourceable config template containing all GIT_HOOK_* defaults:
+```bash
+# Git hook configuration — deployed by dotconfigs project
+# Override these values per-project. Precedence: this file > global .env > defaults below.
+
+# Per-hook enable/disable
+GIT_HOOK_COMMIT_MSG_ENABLED=true
+GIT_HOOK_PRE_PUSH_ENABLED=true
+GIT_HOOK_PRE_COMMIT_ENABLED=true
+GIT_HOOK_PREPARE_COMMIT_MSG_ENABLED=true
+GIT_HOOK_POST_MERGE_ENABLED=true
+GIT_HOOK_POST_CHECKOUT_ENABLED=true
+GIT_HOOK_POST_REWRITE_ENABLED=true
+
+# Commit-msg checks
+GIT_HOOK_BLOCK_AI_ATTRIBUTION=true
+GIT_HOOK_WIP_BLOCK_ON_MAIN=true
+GIT_HOOK_CONVENTIONAL_COMMITS=true
+GIT_HOOK_CONVENTIONAL_COMMITS_STRICT=false
+GIT_HOOK_MAX_SUBJECT_LENGTH=72
+
+# Pre-push
+GIT_HOOK_BRANCH_PROTECTION=warn
+
+# Pre-commit checks
+GIT_HOOK_SECRETS_CHECK=true
+GIT_HOOK_LARGE_FILE_CHECK=true
+GIT_HOOK_LARGE_FILE_THRESHOLD=1048576
+GIT_HOOK_DEBUG_CHECK=true
+GIT_HOOK_DEBUG_CHECK_STRICT=false
+
+# Prepare-commit-msg
+GIT_HOOK_BRANCH_PREFIX=true
+
+# Post-merge / post-rewrite
+GIT_HOOK_DEPENDENCY_CHECK=true
+GIT_HOOK_MIGRATION_REMINDER=true
+
+# Post-checkout
+GIT_HOOK_BRANCH_INFO=true
+```
+This template is deployed to the user-selected config path during `dotconfigs project` (Plan 05). Hooks source this file at runtime.
+
+**Create claude plugin config template (`plugins/claude/templates/claude-hooks.conf`):**
+Per locked decision: "Claude-related settings stay in claude plugin templates." Create a bash-sourceable config template:
+```bash
+# Claude hook configuration — deployed by dotconfigs project
+# Override these values per-project. Precedence: this file > global .env > defaults below.
+
+CLAUDE_HOOK_RUFF_FORMAT=true
+CLAUDE_HOOK_DESTRUCTIVE_GUARD=true
+CLAUDE_HOOK_FILE_PROTECTION=true
+```
+This template is deployed to `.claude/claude-hooks.conf` during `dotconfigs project claude` (Plan 05).
+
 **Remove hooks.conf profiles:**
 Delete the three profile template files per user decision (drop profiles, individual settings only):
 - `plugins/claude/templates/hooks-conf/default.conf`
@@ -211,17 +279,21 @@ Delete the three profile template files per user decision (drop profiles, indivi
 
 Also delete the `plugins/claude/templates/hooks-conf/` directory since it will be empty.
 
-The hooks.conf profile concept is replaced by per-setting toggles in the wizard (Plan 05). The git hook config now lives in git plugin's domain, and claude-specific config stays in claude plugin.
+The hooks.conf profile concept is replaced by per-setting toggles in the wizard (Plan 05). Git hook config lives in git plugin's domain, claude-specific config stays in claude plugin — each plugin deploys its own config files.
   </action>
   <verify>
 - `bash -n plugins/git/hooks/pre-push` passes
 - `grep 'GIT_HOOK_BRANCH_PROTECTION' plugins/git/hooks/pre-push` finds the new name
 - `grep 'PREPUSH_PROTECTION' plugins/git/hooks/pre-push` returns nothing (old name gone)
 - `grep '=== METADATA ===' plugins/git/hooks/pre-push` finds metadata
+- `test -f plugins/git/templates/git-hooks.conf` confirms git config template exists
+- `grep -c 'GIT_HOOK_' plugins/git/templates/git-hooks.conf` returns 15+ (all git hook vars)
+- `test -f plugins/claude/templates/claude-hooks.conf` confirms claude config template exists
+- `grep 'CLAUDE_HOOK_RUFF_FORMAT' plugins/claude/templates/claude-hooks.conf` finds claude setting
 - `ls plugins/claude/templates/hooks-conf/ 2>/dev/null` returns empty or directory doesn't exist
 - `grep -E 'local -n|declare -n' plugins/git/hooks/pre-push` returns nothing
   </verify>
-  <done>pre-push uses unified GIT_HOOK_BRANCH_PROTECTION naming with metadata header. hooks.conf profile templates deleted.</done>
+  <done>pre-push uses unified GIT_HOOK_BRANCH_PROTECTION naming with metadata header. Git plugin config template created at plugins/git/templates/git-hooks.conf with all GIT_HOOK_* defaults. Claude plugin config template created at plugins/claude/templates/claude-hooks.conf with all CLAUDE_HOOK_* settings. hooks.conf profile templates deleted.</done>
 </task>
 
 </tasks>
