--- a/.planning/phases/08-hooks-workflows-review/08-02-PLAN.md
+++ b/.planning/phases/08-hooks-workflows-review/08-02-PLAN.md
@@ -12,7 +12,7 @@ must_haves:
   truths:
     - "/squash-merge command follows industry best practice for solo dev + feature branch workflow"
     - "Tradeoff documentation explains git tracking limitation and why branch deletion handles it"
-    - "Explore agent model selection capability is researched and documented with clear decision"
+    - "Decision documented on whether explore agent model selection hooks are feasible (defer or not-feasible — zero implementation in Phase 08)"
   artifacts:
     - path: "plugins/claude/commands/squash-merge.md"
       provides: "Audited squash-merge command with tradeoff docs"
@@ -91,10 +91,12 @@ Research how Claude Code's explore agent model selection actually works, to dete
 4. Check if the `--model` flag or `model` setting in settings.json affects explore agents
 5. Look at Claude Code hooks documentation for any mention of SubagentStart, SubagentEnd, or agent model configuration
 
-**Decision criteria:**
-- If hooks CAN influence model selection → document the mechanism and recommend implementation in a future plan
-- If hooks CANNOT influence model selection → document the finding and defer to GSD framework (external PR, already in deferred ideas)
-- If unclear → document what's known and recommend deferral
+**Decision criteria — research outcome is a documented decision ONLY:**
+- If hooks CAN influence model selection → document the mechanism and **defer implementation to a future phase** (not Phase 08)
+- If hooks CANNOT influence model selection → document the finding and **defer to GSD framework** (external PR, already in deferred ideas)
+- If unclear → document what's known and **defer** pending more information
+
+**IMPORTANT: Zero implementation in Phase 08 regardless of findings.** This task produces documentation only. Any implementation (if feasible) would be scoped into a future phase or the external GSD PR. Per deferred ideas: "GSD framework: Add Explore agent to model profile lookup table (GSD PR)" — this is external, not this repo.
 
 **Output:** Document findings in the plan summary. No code changes — this is pure research.
 
@@ -102,9 +104,10 @@ Per user decision: "Research properly how explore agent model selection actually
   </action>
   <verify>
 - Research findings are captured in the summary
-- A clear decision is made: implement, defer, or needs-more-research
+- A clear decision is made: defer to future phase, defer to GSD external PR, or needs-more-research
+- No code files are created or modified by this task
   </verify>
-  <done>Explore agent model selection is researched. Decision documented with rationale. If deferred, reason is clear.</done>
+  <done>Explore agent model selection is researched. Decision documented as either "defer to future phase" or "defer to GSD external PR" with supporting rationale. Zero implementation — research output only.</done>
 </task>
 
 </tasks>
