--- a/.planning/phases/08-hooks-workflows-review/08-06-PLAN.md
+++ b/.planning/phases/08-hooks-workflows-review/08-06-PLAN.md
@@ -17,6 +17,7 @@ must_haves:
     - "README includes brief GSD framework mention (2-3 lines)"
     - "README links to ROSTER.md"
     - "Roster updates automatically when hooks are added (script re-run)"
+    - "Configuration hierarchy is documented in README: three tiers (hardcoded defaults, global .env, project config), when to use each, plugin config ownership, and discovery paths"
   artifacts:
     - path: "scripts/generate-roster.sh"
       provides: "Auto-generation script for ROSTER.md"
@@ -204,12 +205,54 @@ This is 3 lines as specified by the user decision.
 For a complete list of all hooks, commands, and configuration options, see [docs/ROSTER.md](docs/ROSTER.md).
 ```
 
-3. **Update hooks list in git plugin section** — Update the git plugin description to mention all 7 hooks:
+3. **Add Configuration hierarchy section** — Add a "Configuration" section (or expand the existing one) that comprehensively documents the three-tier hierarchy. This satisfies success criterion 7 ("Configuration hierarchy documented"):
+```markdown
+## Configuration
+
+### Hierarchy
+
+dotconfigs uses a three-tier configuration hierarchy with clear precedence:
+
+| Tier | Location | Scope | Set by |
+|------|----------|-------|--------|
+| 1. Hardcoded defaults | Built into hook scripts | Universal | dotconfigs maintainer |
+| 2. Global `.env` | `dotconfigs/.env` | All projects | `dotconfigs setup <plugin>` wizard |
+| 3. Project config | Per-project config file | Single repo | `dotconfigs project` wizard |
+
+**Precedence:** Project config > Global .env > Hardcoded defaults
+
+Higher tiers override lower tiers. If a setting is not specified at a tier, the next lower tier's value is used.
+
+### When to use each tier
+
+- **Hardcoded defaults** — Sensible out-of-the-box values. You never edit these directly; they exist as fallbacks.
+- **Global `.env`** — Your personal preferences across all projects. Run `dotconfigs setup git` or `dotconfigs setup claude` to configure interactively.
+- **Project config** — Per-repo overrides when a project needs different settings. Run `dotconfigs project` to configure.
+
+### Plugin config ownership
+
+Each plugin owns its own configuration files:
+
+- **Git plugin** deploys `git-hooks.conf` (location selected during setup: `.githooks/config`, `.claude/git-hooks.conf`, or `.git/hooks/hooks.conf`)
+- **Claude plugin** deploys `.claude/claude-hooks.conf`
+
+Hooks discover their config file by searching known paths in order. The selected path is stored in `.dotconfigs.json` for consistency.
+
+### Discovery paths (git hooks)
+
+Git hooks search for config in this order:
+1. `$REPO_ROOT/.githooks/config`
+2. `$REPO_ROOT/.claude/git-hooks.conf`
+3. `$REPO_ROOT/.git/hooks/hooks.conf`
+4. `$REPO_ROOT/.claude/hooks.conf` (backwards compatibility)
+```
+
+4. **Update hooks list in git plugin section** — Update the git plugin description to mention all 7 hooks:
 ```markdown
 - Hooks — `commit-msg` (conventional commits, AI attribution), `pre-commit` (secrets, large files, debug statements), `pre-push` (branch protection), `prepare-commit-msg` (branch prefix), `post-merge` (dependency detection), `post-checkout` (branch info), `post-rewrite` (rebase detection)
 ```
 
-4. **Update directory structure** — Add the new files:
+5. **Update directory structure** — Add the new files:
    - `scripts/generate-roster.sh` under scripts/
    - `docs/ROSTER.md` under docs/
    - New hooks under plugins/git/hooks/
@@ -235,10 +278,14 @@ This enables the roster generation script to discover and document it.
 - `grep 'ROSTER.md' README.md` finds the roster link
 - `grep 'pre-commit.*secrets' README.md` finds updated hook list
 - `grep 'generate-roster' README.md` finds script in directory structure
+- `grep 'Hierarchy' README.md` finds the configuration hierarchy section
+- `grep 'Project config.*Global.*Hardcoded' README.md` finds precedence documentation
+- `grep 'Plugin config ownership' README.md` finds plugin config ownership section
+- `grep 'Discovery paths' README.md` finds config discovery documentation
 - `grep '=== METADATA ===' plugins/claude/hooks/post-tool-format.py` finds metadata block
 - `bash scripts/generate-roster.sh` still works after post-tool-format.py update
   </verify>
-  <done>README has GSD mention (3 lines), roster link, updated hook list, updated directory structure. post-tool-format.py has metadata header for auto-documentation.</done>
+  <done>README has GSD mention (3 lines), roster link, configuration hierarchy documentation (three tiers, when to use each, plugin config ownership, discovery paths), updated hook list, updated directory structure. post-tool-format.py has metadata header for auto-documentation.</done>
 </task>
 
 </tasks>
@@ -247,8 +294,9 @@ This enables the roster generation script to discover and document it.
 1. `bash scripts/generate-roster.sh` produces docs/ROSTER.md without errors
 2. docs/ROSTER.md contains tables for git hooks, claude hooks, and commands
 3. README.md mentions GSD framework and links to ROSTER.md
-4. All hooks (git + claude) have metadata headers parseable by the generation script
-5. Running `scripts/generate-roster.sh` twice produces identical output (idempotent)
+4. README.md has Configuration section with hierarchy, precedence, plugin ownership, discovery paths
+5. All hooks (git + claude) have metadata headers parseable by the generation script
+6. Running `scripts/generate-roster.sh` twice produces identical output (idempotent)
 </verification>
 
 <success_criteria>
@@ -256,6 +304,7 @@ This enables the roster generation script to discover and document it.
 - ROSTER.md is a comprehensive reference for all hooks, commands, and config
 - README includes GSD framework mention (2-3 lines per user decision)
 - README links to ROSTER.md
+- README documents configuration hierarchy: three tiers, precedence, when to use each, plugin config ownership, discovery paths
 - post-tool-format.py has metadata header
 - Script and output are bash 3.2 compatible
 </success_criteria>
