fix(09): revise plans 02 and 03 based on checker feedback

--- a/.planning/phases/09-config-ux-redesign/09-02-PLAN.md
+++ b/.planning/phases/09-config-ux-redesign/09-02-PLAN.md
@@ -10,6 +10,7 @@ files_modified:
   - plugins/claude/templates/settings/settings-template.json
   - .gitignore
 autonomous: true
+# Note: Task 2 (wizard helpers) and Task 3 (template + gitignore) split for scope clarity
 
 must_haves:
   truths:
@@ -24,7 +25,7 @@ must_haves:
     - path: "lib/wizard.sh"
       provides: "Opt-in wizard helpers for category menus and edit mode"
       contains: "wizard_category_menu"
-    - path: "plugins/claude/templates/settings-template.json"
+    - path: "plugins/claude/templates/settings/settings-template.json"
       provides: "Complete public settings.json template"
     - path: ".gitignore"
       provides: "Root settings.json exclusion"
@@ -40,7 +41,7 @@ must_haves:
 Add shared infrastructure for the opt-in wizard UX: G/L provenance colour helpers in lib/colours.sh, opt-in wizard helper functions in lib/wizard.sh, complete settings.json template, and .gitignore entry for root settings.json.
 
 Purpose: Plans 03-05 depend on these shared helpers. Colour badges, category menus, and edit-mode display are reused across both plugin wizards.
-Output: Extended lib/colours.sh, extended lib/wizard.sh, settings.json template, updated .gitignore.
+Output: Extended lib/colours.sh (Task 1), extended lib/wizard.sh (Task 2), settings.json template + .gitignore (Task 3).
 </objective>
 
 <execution_context>
@@ -107,11 +108,9 @@ G/L badge helpers and dim colour constant exist in lib/colours.sh.
 </task>
 
 <task type="auto">
-  <name>Task 2: Add opt-in wizard helpers to lib/wizard.sh + settings template + gitignore</name>
-  <files>lib/wizard.sh, plugins/claude/templates/settings-template.json, .gitignore</files>
+  <name>Task 2: Add opt-in wizard helpers to lib/wizard.sh</name>
+  <files>lib/wizard.sh</files>
   <action>
-**Part A: Add wizard helpers to lib/wizard.sh**
-
 Add these helper functions for the opt-in category wizard UX:
 
 1. **`wizard_category_menu`** — Display a numbered category menu using read (not select). Args: title, category_names (array name). Returns selected index via exit code (0-based). Uses a while loop with read prompt and validates input range.
@@ -121,10 +120,25 @@ Add these helper functions for the opt-in category wizard UX:
 3. **`wizard_parse_edit_selection`** — Parse comma-separated number input for edit mode. Args: input_string, max_index. Prints space-separated list of valid 0-based indices. Handles whitespace, validates range, deduplicates.
 
 4. **`wizard_config_toggle`** — Display a list of configs in a category and let user toggle which to manage. Args: title, config_names (array name), selected (array name). Shows `[x]`/`[ ]` checkboxes. User enters numbers to toggle, 'done' to finish, 'all' to select all, 'none' to deselect all. Updates the selected array in-place. This is similar to existing `wizard_checkbox_menu` but with 'none' option and cleaner formatting.
+  </action>
+  <verify>
+- `grep -c "wizard_category_menu" lib/wizard.sh` returns at least 1
+- `grep -c "wizard_edit_mode_display" lib/wizard.sh` returns at least 1
+- `grep -c "wizard_parse_edit_selection" lib/wizard.sh` returns at least 1
+- `grep -c "wizard_config_toggle" lib/wizard.sh` returns at least 1
+  </verify>
+  <done>
+Four new wizard helper functions exist in lib/wizard.sh.
+  </done>
+</task>
 
-**Part B: Create complete settings.json template**
+<task type="auto">
+  <name>Task 3: Create settings.json template + add .gitignore entry</name>
+  <files>plugins/claude/templates/settings/settings-template.json, .gitignore</files>
+  <action>
+**Part A: Create complete settings.json template**
 
-Create `plugins/claude/templates/settings-template.json` as a complete working example with ALL common rules. This is the public template (users delete what they don't want). Include:
+Create `plugins/claude/templates/settings/settings-template.json` (inside the existing `settings/` directory alongside base.json, python.json, etc.) as a complete working example with ALL common rules. This is the public template (users delete what they don't want). Include:
 - Core permissions (deny secrets, ask .env)
 - Python rules (ruff, pytest, pip, python — allow)
 - Node rules (npm, npx, node, pnpm — allow)
@@ -136,21 +150,17 @@ Create `plugins/claude/templates/settings-template.json` as a complete working e
 
 NOTE: JSON doesn't support comments, so add a `"_template_note"` key at the top explaining this is a reference template.
 
-**Part C: Add settings.json to .gitignore**
+**Part B: Add settings.json to .gitignore**
 
 Read the existing `.gitignore` file. Add `settings.json` entry if not already present. This prevents the personal root `settings.json` (which contains user-specific rules like nvidia-smi, docker, /proc/* reads) from being committed when the repo goes public.
   </action>
   <verify>
-- `grep -c "wizard_category_menu" lib/wizard.sh` returns at least 1
-- `grep -c "wizard_edit_mode_display" lib/wizard.sh` returns at least 1
-- `grep -c "wizard_parse_edit_selection" lib/wizard.sh` returns at least 1
-- `grep -c "wizard_config_toggle" lib/wizard.sh` returns at least 1
-- `test -f plugins/claude/templates/settings-template.json && echo "exists"`
+- `test -f plugins/claude/templates/settings/settings-template.json && echo "exists"`
+- `python3 -c "import json; json.load(open('plugins/claude/templates/settings/settings-template.json'))" && echo "valid JSON"`
 - `grep -q "settings.json" .gitignore && echo "gitignored"`
   </verify>
   <done>
-- Four new wizard helper functions exist in lib/wizard.sh
-- Complete settings.json template exists at plugins/claude/templates/settings-template.json
+- Complete settings.json template exists at plugins/claude/templates/settings/settings-template.json
 - Root settings.json is listed in .gitignore
   </done>
 </task>
