--- a/.planning/phases/09-config-ux-redesign/09-03-PLAN.md
+++ b/.planning/phases/09-config-ux-redesign/09-03-PLAN.md
@@ -15,6 +15,7 @@ must_haves:
     - "Opted-in configs show pre-filled suggested value; user presses Enter to accept or types to change"
     - "Re-run shows edit mode with current state and lets user pick numbers to edit"
     - "Final summary shows selected configs with values + skipped ones as [not managed]"
+    - "Git identity configs (CLAUDE_GIT_USER_NAME, CLAUDE_GIT_USER_EMAIL) NOT collected by Claude wizard — handled by git plugin (Plan 04)"
   artifacts:
     - path: "plugins/claude/setup.sh"
       provides: "Opt-in category-based Claude setup wizard"
@@ -24,6 +25,11 @@ must_haves:
       to: "lib/wizard.sh"
       via: "wizard_category_menu, wizard_edit_mode_display"
       pattern: "wizard_category_menu\\|wizard_edit_mode_display"
+    - from: "plugins/claude/setup.sh"
+      to: "plugins/git/setup.sh"
+      via: "Git identity responsibility moved to git plugin (Plan 04)"
+      pattern: "CLAUDE_GIT_USER_NAME|CLAUDE_GIT_USER_EMAIL"
+      assertion: "absent_from_wizard_flow"
 ---
 
 <objective>
