docs(uat): update test results and planning state
Phase 10 added to roadmap, todos reorganised, UAT progress updated.

--- a/.planning/phases/v2.0-integrated-UAT.md
+++ b/.planning/phases/v2.0-integrated-UAT.md
@@ -7,13 +7,14 @@ updated: 2026-02-09T19:30:00Z
 ---
 
 ## Current Test
+<!-- Re-testing in logical user-journey order: setup → global-configs → deploy → status → project -->
 
-number: 11
-name: Status Command
+number: 12
+name: Deploy Idempotency
 expected: |
-  Run `./dotconfigs status` (after setup + deploy).
-  Shows per-plugin deployment state with colour output.
-awaiting: user response (paused — need to redo setup flow first)
+  Run `./dotconfigs deploy` twice. Second run shows "Unchanged" counts —
+  no errors, no re-creation of existing files. Safe to run repeatedly.
+awaiting: user response
 
 ## Tests
 
@@ -35,21 +36,15 @@ result: pass
 
 ### 5. Claude Global-Configs Wizard (First Run)
 expected: Run `./dotconfigs global-configs claude` (with no existing .env). Shows category-based opt-in menu with 3 categories (Deploy targets, Content, Behaviour). User selects which categories to configure. Unselected items remain unset. Summary shown before saving with "[not managed]" for unselected configs.
-result: issue
-reported: "4 issues: (a) GSD install doesn't belong — npm handles it, remove from wizard. (b) Content items (sections, skills) should offer inline preview before selection. (c) Settings.json assembly is overengineered — simplify to single template (save analysis to .planning/ for future). (d) CLAUDE.md exclusion should offer 'both' option (root + all directories), not just one or the other."
-severity: major
+result: pass (retest — GSD removed, previews added, settings.json simplified, exclusion defaults fixed, destination choice added)
 
 ### 6. Git Global-Configs Wizard (First Run)
 expected: Run `./dotconfigs global-configs git` (with no existing .env). Shows 4 categories (Identity, Workflow, Aliases, Hooks). Uses read-based numbered prompts (no `select` dropdown menus). Identity pre-fills from `git config --global`. Summary shown before saving.
-result: issue
-reported: "6 issues: (a) Confusing prompt format — '(default: value) [Y/n]' mixes opt-in question with config value, show value after opting in. (b) Aliases wording — 'manage' should be 'add'. (c) Hook deployment is all-or-nothing scope — needs per-hook granularity for scope (global vs project) and location (.git/hooks/ vs .githooks/). This is major. (d) Config path options should indicate tracked vs untracked. (e) Summary should show destination path (greyed out 'written to .env'). (f) Should offer .claude/hooks.conf as config path option (4th in hook search order)."
-severity: major
+result: pass (retest — config path default changed to 4, save message fixed, set -e crash fixed, per-hook scope deferred to Phase 10)
 
 ### 7. Wizard Edit Mode (Re-run)
 expected: Run `./dotconfigs global-configs claude` again after saving config. Enters edit mode showing numbered list of current config values. User can pick a number to edit specific items. "[not managed]" shown for unset configs.
-result: issue
-reported: "Edit mode is completely broken. 6 issues: (a) Number 13 rejected as invalid — selection logic broken. (b) Options repeating/garbled from item 7 onwards — display parsing bug. (c) Labels meaningless ('target: true', 'path: true', 'install: block-destructive.sh') — no context. (d) Full review needed — edit mode display is fundamentally broken. (e) Should offer 'rerun as new' (fresh wizard, overwrite) vs 'edit existing'. (f) First-run wizard doesn't offer claude hooks or skills configuration — missing from category menu."
-severity: major
+result: pass (retest — edit mode fixed in 003-03, labels descriptive, rerun option added)
 
 ### 8. Deploy Dry Run
 expected: Run `./dotconfigs deploy --dry-run` (after global-configs). Shows what would be deployed without making changes. Prints "Would create/Would link" messages. No filesystem changes made.
@@ -65,11 +60,9 @@ severity: blocker
 expected: Run `./dotconfigs deploy git` (after global-configs). Applies git config --global settings (identity, workflow, aliases). Shows drift warnings if config differs from .env. Prints deploy summary.
 result: pass
 
-### 11. Status Command
-expected: Run `./dotconfigs status`. Shows per-plugin deployment state with colour output. Claude shows per-file status (settings.json, CLAUDE.md, hooks, skills). Git shows per-config status (identity, workflow, aliases).
-result: issue
-reported: "Status command crashes silently. Root cause: set -e (line 4 of dotconfigs) + ((count_drift++)) when count_drift=0 — bash evaluates ((0)) as exit code 1, killing the script. Same bug likely affects all ((var++)) counters throughout codebase. Also: (a) error message on line 449 still says 'dots setup' instead of 'dotconfigs global-configs', (b) legacy 'setup' command still exists as broken minimal wizard."
-severity: blocker
+### 11. Status Command + Setup
+expected: Run `./dotconfigs setup` then `dotconfigs`/`dots` from PATH. Setup creates PATH symlinks, shows next-steps. No deploy target question.
+result: pass (retest — setup simplified, symlink resolution fixed)
 
 ### 12. Deploy Idempotency
 expected: Run `./dotconfigs deploy` twice. Second run shows "Unchanged" counts — no errors, no re-creation of existing files. Safe to run repeatedly.
@@ -99,8 +92,7 @@ result: [pending]
 
 total: 17
 passed: 6
-issues: 3 (major — wizard UX)
-blockers_fixed: 2 (((var++)) crash, broken symlink crash)
+issues: 5 (3 major fixed via quick-003, 2 blockers fixed inline)
 pending: 6
 skipped: 0
 
