--- a/.planning/phases/v2.0-integrated-UAT.md
+++ b/.planning/phases/v2.0-integrated-UAT.md
@@ -7,11 +7,11 @@ updated: 2026-02-09T19:30:00Z
 ---
 
 ## Current Test
-<!-- All tests complete -->
+<!-- Automated checks done, awaiting manual verification from test 12 onwards -->
 
-number: complete
-name: All tests passed
-awaiting: none
+number: 12
+name: Deploy Idempotency
+awaiting: manual verification
 
 ## Tests
 
@@ -63,19 +63,19 @@ result: pass (retest — setup simplified, symlink resolution fixed)
 
 ### 12. Deploy Idempotency
 expected: Run `./dotconfigs deploy` twice. Second run shows "Unchanged" counts — no errors, no re-creation of existing files. Safe to run repeatedly.
-result: pass (all symlinked — settings.json, CLAUDE.md, hooks, skills. Content-change detection for generated files. --force resolves foreign conflicts, second run shows all Unchanged)
+result: [pending manual] (automated: second deploy shows all Unchanged, --force resolves conflicts, content-change detection works)
 
 ### 13. Project-Configs with G/L Badges
 expected: From a git repo (not dotconfigs), run `dotconfigs project-configs .`. Shows globally-set values with cyan [G] badge. Local overrides shown with green [L] badge. Interactive wizard for project-level configuration.
-result: pass (verified wizard starts correctly with [G] badge, detects brownfield project)
+result: [pending manual] (automated: wizard starts, shows [G] badge, detects brownfield)
 
 ### 14. Git Hooks Exist
 expected: Run `ls plugins/git/hooks/`. Should contain 7 hooks: commit-msg, pre-commit, pre-push, prepare-commit-msg, post-merge, post-checkout, post-rewrite. All executable.
-result: pass (7 hooks present, permissions fixed to 755)
+result: [pending manual] (automated: 7 hooks present, permissions 755)
 
 ### 15. dots Symlink
 expected: `dots` exists as a symlink pointing to `dotconfigs`. Running `./dots list` produces identical output to `./dotconfigs list`. Also: `dots` should get a PATH symlink too, not just `dotconfigs`.
-result: pass (dots → dotconfigs in repo, PATH symlinks at ~/.local/bin/dotconfigs and ~/.local/bin/dots, identical output)
+result: [pending manual] (automated: dots → dotconfigs in repo, PATH symlinks at ~/.local/bin/, identical output)
 
 ### 16. PATH Symlink
 expected: After running `./dotconfigs deploy`, check if `~/.local/bin/dotconfigs` symlink exists. Verify `dotconfigs` is callable from another directory.
