fix(11): revise plans based on checker feedback

--- a/.planning/phases/11-json-config-core-deploy/11-01-PLAN.md
+++ b/.planning/phases/11-json-config-core-deploy/11-01-PLAN.md
@@ -75,7 +75,7 @@ Create `lib/deploy.sh` -- a shared library sourced by the CLI entry point. Must 
    - Make source absolute: if not starting with `/`, prepend `$dotconfigs_root/`
    - Validate source exists (warn and skip if not)
    - Switch on method:
-     - **symlink**: If source is a directory, call `deploy_directory_files`. If source is a file, call `backup_and_link` from lib/symlinks.sh (for live deploy) or print "Would link" (for dry-run).
+     - **symlink**: If source is a directory, call `deploy_directory_files`. If source is a file, call `backup_and_link` from lib/symlinks.sh (for live deploy) or print "Would link" (for dry-run). When calling `backup_and_link`, pass `$(basename "$target")` as the 3rd "name" parameter (display name for conflict prompts).
      - **copy**: If dry-run, print "Would copy". Otherwise `mkdir -p` parent, `cp -p` source to target. If target already matches source content, report "Unchanged".
      - **append**: If dry-run, print "Would append". Otherwise `mkdir -p` parent, check if content already present (idempotent), `cat >> target` if not.
    - Return status string via stdout: "created", "updated", "unchanged", or "skipped".
@@ -84,7 +84,7 @@ Create `lib/deploy.sh` -- a shared library sourced by the CLI entry point. Must 
    - mkdir -p target_dir (unless dry-run)
    - If include_csv is non-empty, split on comma into array, deploy only those files
    - If include_csv is empty, deploy all files in source_dir
-   - For each file, call `backup_and_link` (or dry-run equivalent)
+   - For each file, call `backup_and_link` passing `$(basename "$file")` as the name parameter (or dry-run equivalent)
    - Track and return counts
 
 7. `deploy_from_json()` -- Main entry point. Takes config_file, dotconfigs_root, and optional group_key, dry_run, force flags. Steps:
