--- a/.planning/phases/11-json-config-core-deploy/11-02-PLAN.md
+++ b/.planning/phases/11-json-config-core-deploy/11-02-PLAN.md
@@ -122,7 +122,7 @@ cmd_deploy() calls deploy_from_json() from lib/deploy.sh with global.json. Help 
   <action>
 The current settings.json at `plugins/claude/settings.json` uses `$CLAUDE_PROJECT_DIR` variable references in hook paths. These were partially fixed in Phase 10, but for v3.0 the file needs to be a complete, ready-to-symlink artifact with no unresolved variables.
 
-Check current `plugins/claude/settings.json` content. The hook paths should already use `~/.claude/hooks/` absolute paths (from Phase 10 fix). If they still contain `$CLAUDE_PROJECT_DIR`, replace with absolute paths to `~/.claude/hooks/`.
+Verify `plugins/claude/settings.json` hook paths use `~/.claude/hooks/` (should already be correct from Phase 10). If any template variables remain, replace with absolute paths. Confirm no unresolved variables remain.
 
 The settings.json in `plugins/claude/` is what gets symlinked to `~/.claude/settings.json` via global.json. It must be correct as-is.
 
