--- a/.planning/phases/11-json-config-core-deploy/11-03-PLAN.md
+++ b/.planning/phases/11-json-config-core-deploy/11-03-PLAN.md
@@ -83,7 +83,7 @@ Steps:
    - project_root = `"$project_path"` (target paths resolve relative to this)
 6. After deployment, auto-exclude `.dotconfigs/` via `.git/info/exclude` at the project path
 
-**Modify `deploy_from_json()` in lib/deploy.sh** to accept an optional `project_root` parameter. When project_root is set:
+**Modify `deploy_from_json()` in lib/deploy.sh** to accept an optional `project_root` parameter. (This modification is backwards-compatible with Plan 11-02's usage -- project_root will be empty/omitted for global deploy.) When project_root is set:
 - Target paths that DON'T start with `/` or `~` are resolved relative to project_root (prepend project_root)
 - Target paths that DO start with `/` or `~` resolve normally (absolute or tilde-expand)
 
